--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,6 @@
 name: Docker
 
 on:
-  schedule:
-    - cron: '25 12 * * *'
   push:
     branches: [ master ]
     # Publish semver tags as releases.
@@ -12,7 +10,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: eugeny/tabby-web
+  IMAGE_NAME: luminisward/tabby-web
 
 
 jobs:
@@ -25,11 +23,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
+
       # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-        
+
       # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         id: buildx
@@ -54,7 +52,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
